Various documentations and text improvements.

--- a/gazetteer/templates/base.html
+++ b/gazetteer/templates/base.html
@@ -24,10 +24,11 @@
 </div>
 
 <div id="footer" role="navigation">
-    <p>This data contains Ordnance Survey data © Crown copyright and database
+    <p>This site uses Ordnance Survey data © Crown copyright and database
     right 2010. Code-Point Open contains Royal Mail data © Royal Mail copyright
-    and database right 2010. Data may be used under the terms of the OS
-    OpenData licence.</p>
+    and database right 2010. Data may be used under the terms of the
+    <a href="http://www.ordnancesurvey.co.uk/oswebsite/opendata/">OS OpenData</a>
+    licence.</p>
 </div>
 
 </body>
